--- a/css/prefix.css
+++ b/css/prefix.css
@@ -75,7 +75,7 @@ footer,
 }
 .nav-link:hover {
   color: #000;
-  font-size: 14px;
+  font-size: 12px;
 }
 .logo,
 .logo2 {
@@ -83,7 +83,8 @@ footer,
   height: 30px;
 }
 .intro,
-.intro2 {
+.intro2,
+.intro3 {
   background-image: url(../image/bitmap.png);
   background-position: center;
   background-size: cover;
@@ -115,7 +116,8 @@ footer,
   margin: 40px 0px;
 }
 .intro-btn,
-.how-btn {
+.how-btn,
+.drink-btn {
   width: 180px;
   height: 50px;
   background: #66d2cf;
@@ -133,10 +135,9 @@ footer,
   transition: all 0.3s linear;
 }
 .intro-btn:hover,
-.how-btn:hover {
-  background-color: #fefcf7;
+.intro-btn-active {
+  background-color: #ffffff;
   color: #66d2cf;
-  width: 200px;
 }
 
 main {
@@ -184,7 +185,6 @@ main {
 }
 .pack:hover {
   background-color: #b6b9bc;
-  width: 220px;
 }
 .pack-img {
   width: 200px;
@@ -278,9 +278,9 @@ main {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-.group1:hover {
-  width: 300px;
-  height: 300px;
+.group1:hover,
+.group1:active {
+  background-color: #333d4b;
 }
 .group1-title {
   font-family: "Fraunces";
@@ -356,8 +356,10 @@ main {
 .order1 {
   width: 300px;
   height: 300px;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
-
 .number {
   font-family: "Fraunces";
   font-style: normal;
@@ -383,11 +385,19 @@ main {
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-
   color: #333d4b;
 }
 .how-btn {
   margin-top: 40px;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+.how-btn:hover,
+.how-btn:active {
+  background-color: #fff;
+  color: #66d2cf;
+  border: 3px solid #66d2cf;
 }
 footer {
   background-color: #2c343e;
@@ -415,11 +425,6 @@ footer {
 }
 .footer-link:hover {
   color: #ffffff;
-  font-size: 14px;
-}
-.icon:hover {
-  width: 30px;
-  height: 30px;
 }
 
 /* About Us */
@@ -515,9 +520,6 @@ footer {
 .country1 {
   width: 250px;
   height: 250px;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
 }
 .country1-img {
   width: 50px;
@@ -542,10 +544,217 @@ footer {
   color: #333d4b;
   width: 250px;
 }
-.country1:hover {
-  width: 280px;
-  height: 280px;
-  border: 3px solid #0e8784;
+
+/* Contact */
+.intro3 {
+  background-image: url(../image/page3\ bitmap.png) !important;
+  padding-top: 130px;
+}
+.intro-title {
+  font-size: 50px !important;
+}
+.how3 {
+  margin-top: 250px;
+  padding: 50px;
+  background-color: #2c343e;
   border-radius: 10px;
-  padding: 10px;
+}
+.how-subtitle3 {
+  color: #fff !important;
+}
+.order1-title3 {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  color: #fefcf7;
+  width: 250px;
+  margin: 20px 0;
+}
+.order1-text3 {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #fefcf7;
+}
+
+/* drink */
+.drink {
+  margin: 100px 0;
+  padding: 50px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.drink-left {
+  width: 250px;
+  position: sticky;
+  top: 20px;
+  bottom: 20px;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.drink-left-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  height: 80px;
+}
+.num {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #0e8784;
+  opacity: 0.5;
+}
+.name {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333d4b;
+  opacity: 0.7;
+}
+.line3 {
+  width: 250px;
+  height: 1px;
+  background: #83888f;
+  mix-blend-mode: normal;
+  opacity: 0.25;
+}
+.drink-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 600px;
+}
+.choose:nth-child(1),
+.choose:nth-child(2),
+.choose:nth-child(3),
+.choose:nth-child(4) {
+  margin-bottom: 50px;
+}
+.choose-title {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 35px;
+  line-height: 48px;
+  color: #83888f;
+}
+.chooses {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 50px;
+}
+.choose1 {
+  width: 180px;
+  height: 200px;
+  background: #f4f1eb;
+  border-radius: 10px;
+  padding: 20px;
+  border: none;
+  color: #333d4b;
+  -webkit-transition: background-color 0.3s linear;
+  -o-transition: background-color 0.3s linear;
+  transition: background-color 0.3s linear;
+}
+.choose1-title {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+}
+.choose1-text {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  margin-top: 20px;
+}
+.choose1:focus {
+  background-color: #0e8784;
+  color: #fff;
+}
+.choose1:hover {
+  background-color: #fdd6ba;
+}
+.summary {
+  background-color: #2c343e;
+  margin: 50px auto;
+  border-radius: 10px;
+  padding: 30px;
+}
+.summary-title {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: #ffffff;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+.summary-text {
+  font-family: "Fraunces";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 40px;
+  color: #ffffff;
+  margin-top: 20px;
+}
+.high {
+  color: #0e8784;
+}
+.btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
