--- a/home-block/_collection.scss
+++ b/home-block/_collection.scss
@@ -26,7 +26,7 @@
   }
   &-pack {
     width: 250px;
-    border-radius: 10px;    
+    border-radius: 10px;
     &:hover {
       background-color: #b7bfc9;
       transition: all 0.3s linear;
@@ -40,5 +40,48 @@
   &-text {
     @include text("Barlow", 230px, #333d4b);
     text-align: center;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .collection {
+    margin: 100px auto;
+    width: 90%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &-back {
+      position: relative;
+      top: 0;
+      font-size: 40px;
+      line-height: normal;
+      text-align: center;
+      opacity: 0.5;
+    }
+
+    &-packs {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
+      gap: 40px;
+    }
+
+    &-pack {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    &-title {
+      @include title(24px, auto, #333d4b);
+      margin: 15px 0 10px;
+    }
+
+    &-text {
+      @include text("Barlow", auto, #333d4b);
+    }
   }
 }
