--- a/home-block/_footer.scss
+++ b/home-block/_footer.scss
@@ -30,3 +30,44 @@
     }
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .footer {
+    margin-top: 100px;
+    width: 90%;
+    height: auto;
+    @include flex;
+    flex-direction: column;
+    gap: 50px;
+    background: #2c343e;
+    border-radius: 10px;
+    padding: 50px;
+    &-logo {
+      width: 250px;
+      height: auto;
+    }
+    &-list {
+      @include flex;
+      flex-direction: column;
+      gap: 30px
+    }
+
+    &-link {
+      @include nav-link2;
+    }
+    &-images {
+      @include flex;
+      width: 150px;
+    }
+    &-icon {
+      width: 30px;
+      height: 30px;
+      color: #fff;
+      transition: all 0.3s linear;
+      &:hover,
+      &:active {
+        color: #0e8784;
+      }
+    }
+  }
+}
