--- a/home-block/_mixin.scss
+++ b/home-block/_mixin.scss
@@ -81,3 +81,20 @@
   color: #333d4b;
   transition: background-color 0.3s linear;
 }
+@mixin button2($width, $height, $back) {
+  width: $width;
+  height: $height;
+  font-family: "Fraunces";
+  color: #fff;
+  font-size: 10px;
+  background: $back;
+  border-radius: 8px;
+  border: none;
+  transition: all 0.3s linear;
+  &:hover,
+  &:active {
+    background-color: #fff;
+    color: #66d2cf;
+    border: 3px solid #66d2cf;
+  }
+}
