--- a/home-block/_why.scss
+++ b/home-block/_why.scss
@@ -45,3 +45,56 @@
     }
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .why {
+    margin: 100px auto;
+    height: auto;
+    width: 90%;
+    background-color: #2c343e;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    padding: 30px;
+    &-title {
+      @include title(35px, auto, #fff);
+      margin: auto;
+    }
+    &-text {
+      @include text("Barlow", auto, #fff);
+      margin: 30px auto;
+    }
+    &-groups {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      width: 100%;
+      top: 0;
+      left: 0;
+    }
+    &-group {
+      background: #0e8784;
+      border-radius: 10px;
+      width: 300px;
+      height: 300px;
+      padding: 40px;
+      &:hover {
+        transition: all 0.3s linear;
+        background-color: #333d4b;
+      }
+      &-title {
+        @include title(24px, auto, #fff);
+        margin: 10px auto;
+      }
+      &-text {
+        @include text("Barlow", auto, #fff);
+        margin: auto;
+      }
+      &-img {
+        width: 70px;
+        height: 70px;
+      }
+    }
+  }
+}
