--- a/aboutus.block/_commitment.scss
+++ b/aboutus.block/_commitment.scss
@@ -19,3 +19,21 @@
     @include text("Barlow", auto, #333d4b);
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .commitment {
+    width: 90%;
+    flex-direction: column;
+    padding: 20px 0;
+
+    &-img {
+      width: 100%;
+      height: 400px;
+    }
+    &-textarea {
+      margin: 30px 0;
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
