--- a/aboutus.block/_countries.scss
+++ b/aboutus.block/_countries.scss
@@ -22,3 +22,20 @@
     }
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .countries {
+    width: 90%;
+    &-title {
+      text-align: center;
+    }
+  }
+
+  .country {
+    width: 100%;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: center;
+    text-align: center;
+  }
+}
