--- a/aboutus.block/_intro2.scss
+++ b/aboutus.block/_intro2.scss
@@ -1,16 +1,31 @@
 .intro2 {
-    @include margin;
-    @include back-img(url(../image/page2backgroundimg.png));
-    height: 400px;
-    border-radius: 10px;
-    padding: 50px 100px;
+  @include margin;
+  @include back-img(url(../image/page2backgroundimg.png));
+  height: 400px;
+  border-radius: 10px;
+  padding: 50px 100px;
 
+  &-title {
+    @include title(50px, auto, #fff);
+    margin-top: 50px;
+  }
+  &-text {
+    @include text("Barlow", 400px, #fff);
+    margin: 40px 0;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .intro2 {
+    width: 90%;
+    height: auto;
+    padding: 10px 20px;
     &-title {
-        @include title (50px, auto, #fff);
-        margin-top: 50px
+      @include title(25px, auto, #fff);
     }
     &-text {
-        @include text ('Barlow', 400px, #fff);
-        margin: 40px 0;
+      @include text("Barlow", 100%, #fff);
+      margin: 40px 0;
     }
+  }
 }
