--- a/home-block/_footer.scss
+++ b/home-block/_footer.scss
@@ -49,7 +49,47 @@
     &-list {
       @include flex;
       flex-direction: column;
-      gap: 30px
+      gap: 30px;
+    }
+
+    &-link {
+      @include nav-link2;
+    }
+    &-images {
+      @include flex;
+      width: 150px;
+    }
+    &-icon {
+      width: 30px;
+      height: 30px;
+      color: #fff;
+      transition: all 0.3s linear;
+      &:hover,
+      &:active {
+        color: #0e8784;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    margin-top: 100px;
+    width: 90%;
+    height: auto;
+    @include flex;
+    flex-direction: column;
+    gap: 50px;
+    background: #2c343e;
+    border-radius: 10px;
+    padding: 50px;
+    &-logo {
+      width: 250px;
+      height: auto;
+    }
+    &-list {
+      @include flex;
+      gap: 30px;
     }
 
     &-link {
