--- a/home-block/_how.scss
+++ b/home-block/_how.scss
@@ -107,3 +107,58 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .how {
+    width: 90%;
+    padding: 30px 0px;
+    margin-top: 0;
+    &-subtitle {
+      @include title(24px, auto, #83888f);
+    }
+    &-lines {
+      display: flex;
+      align-items: center;
+    }
+    &-circle {
+      justify-content: center;
+      width: 20px;
+      height: 20px;
+      border-radius: 10%;
+      border: 3px solid forestgreen;
+      transition: transform 1s ease;
+      &:active {
+        background-color: #0e8784;
+        transform: rotate(135deg);
+      }
+    }
+    &-line {
+      width: 230px;
+      height: 3px;
+      background: #fdd6ba;
+      margin: 100px 0;
+    }
+    &-order {
+      @include flex;
+      gap: 50px;
+      width: 100%;
+    }
+    &-order1 {
+      &-title {
+        @include title(25px, auto, #333d4b);
+        margin: 30px 0;
+      }
+      &-text {
+        @include text("Barlow", auto, #333d4b);
+      }
+    }
+    &-number {
+      @include title(50px, auto, #fdd6ba);
+    }
+    &-btn {
+      @include button;
+      background: #0e8784;
+      margin: 50px 0;
+    }
+  }
+}
