--- a/home-block/_intro.scss
+++ b/home-block/_intro.scss
@@ -38,3 +38,29 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .intro {
+    width: 90%;
+    @include back-img(url(/image/bitmap.png));
+    padding: 30px 0px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 50px;
+    margin-top: 30px;
+    &-title {
+      @include title(48px, 350px, #fff);
+      text-align: left;
+    }
+    &-text {
+      @include text("Barlow", 400px, #fff);
+      font-size: 15px;
+      text-align: left;
+    }
+    &-btn {
+      @include button2(250px, 50px, #0e8784);
+      font-size: 18px;
+    }
+  }
+}
