--- a/home-block/_footer.scss
+++ b/home-block/_footer.scss
@@ -72,7 +72,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .footer {
     margin-top: 100px;
     width: 90%;
