--- a/home-block/_how.scss
+++ b/home-block/_how.scss
@@ -108,7 +108,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .how {
     width: 90%;
     padding: 30px 0px;
