--- a/home-block/_navbar.scss
+++ b/home-block/_navbar.scss
@@ -27,7 +27,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .nav {
     width: 90%;
     &-logo {
@@ -47,6 +47,7 @@
 
 @media only screen and (max-width: 450px) {
   .nav {
+    margin-bottom: 30px;
     padding: 10px;
     width: 90%;
     &-logo {
