--- a/home-block/_why.scss
+++ b/home-block/_why.scss
@@ -99,7 +99,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .why {
     margin: 100px auto;
     height: auto;
