--- a/contact-block/_intro3.scss
+++ b/contact-block/_intro3.scss
@@ -28,3 +28,18 @@
     }
   }
 }
+
+@media (min-width: 450px) and (max-width: 768px) {
+  .intro3 {
+    width: 90%;
+    height: 400px;
+    padding: 60px;
+    &-title {
+      @include title(28px, auto, #fff);
+    }
+    &-text {
+      @include text("Barlow", 60%, #fff);
+      margin: 40px 0;
+    }
+  }
+}
